<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/cel2"
    tools:context=".RadioMainActivity" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="#C00514"
        android:textSize="20sp"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:text="@string/dig1" />
  
   <EditText 
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv1"
        android:textColor="#C00514"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:hint="@string/hint1"
        android:ems="10">
        <requestFocus/>
       </EditText>
   <TextView 
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et1"
        android:textColor="#C00514"
        android:textSize="20sp"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:text="@string/dig2" 
           />
   <EditText 
        android:id="@+id/et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv2"
        android:textColor="#C00514"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:hint="@string/hint1"
        android:ems="10"/>
   <RadioGroup 
      	android:id="@+id/rg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et2">
        <RadioButton 
            android:id="@+id/r1"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:checked="true"
        	android:text="@string/sum"
        	android:textColor="#FCFCFC"
        	android:textStyle="italic"
        	android:fontFamily="cursive"
            />
        <RadioButton 
            android:id="@+id/r2"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/res"
        	android:textColor="#FCFCFC"
        	android:textStyle="bold"
        	android:fontFamily="cursive"
            />
   </RadioGroup>
   <Button 
       	android:id="@+id/b1"
      	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rg2"
        android:onClick="operar"
        android:text="@string/op"
        android:textColor="#C00514"
        android:textStyle="italic"
        android:fontFamily="cursive"
        />
   <TextView 
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/b1"
        android:textColor="#C00514"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:textSize="25sp"
        android:text="@string/resp" 
           />

</RelativeLayout>
